# IP_VLAN_TMF685

./: .env  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  config.yml  cookiecutter-config-file.yml  docker-compose.deploy.yml  docker-compose.override.yml  docker-compose.yml  tmf685.dockerfile
.deployment/: resource_pool_management.helmfile.yaml  resource_pool_management.values.yaml.gotmpl  role-binding.yaml  values.yaml.gotmpl
.deployment/helm/: Chart.yaml
.gitlab/ci/: static_analysis.yml
app/: .coverage  .env.example  alembic.ini  prestart.sh  pyproject.toml
app/alembic/: README  env.py  script.py.mako
app/alembic/versions/: 2023_09_28_0055-62011ace92c0_initial_revision.py  2023_10_04_1154-ee9309f94d71_initials.py  2023_10_05_0654-cdc9e3b87376_initials.py  2023_10_05_1036-d8de033ca61c_initials.py  2023_10_05_1141-5abbe0660cf4_initial_schema.py  2023_10_05_1528-a80704e68b25_add_channel_reference_table.py  2023_10_06_1027-e5976acba19e_add_requested_period_table.py  2023_10_08_1330-d9f0c8620990_reservation_item_table_added.py  2023_10_09_0454-071670c52022_resource_capacity_demand_table_added.py  2023_10_09_1500-d3cc1dbb8015_resource_pool_table_added.py  2023_10_09_1520-aac30906a30e_foreign_key_constrain_applied_to_.py  2023_10_10_1004-63d52cbdb74d_initials.py  2023_10_11_0729-2d188d7adcf4_resource_section_added.py  2023_10_18_1631-2c15792750b5_intial.py  2023_10_30_1826-6e03156fdbc9_initial.py  2023_11_07_0651-17b4755d875f_intial.py  2023_11_17_0909-46a01760d91e_add_resource_model.py  2023_11_21_0613-5b53b4aa3aef_add_response_models.py  2023_11_22_1439-4805a696deba_initial.py  2023_11_24_0928-823e6f4f7887_add_vlan_allocation_table.py  2023_11_26_0727-b4298a12faf9_add_pool_id_in_vlan_table.py  d4867f3a4c0a_first_revision.py
app/app/: __init__.py  app_prestart.py  backend_pre_start.py  initial_data.py  main.py  pyproject.toml  tests_pre_start.py
app/app/api/: deps.py
app/app/api/api_v1/: api.py
app/app/api/api_v1/endpoints/: __init__.py  items.py  reservation_endpoints.py  resource_endpoints.py  resource_pool_endpoints.py  resource_pool_enpoints.py  utils.py
app/app/api/responses/: reservation_responses.py  resource.py  resource_responses.py
app/app/api/utils/: __init__.py  exception_handler.py  reservation_alias_mapping.py  reservation_response.py  resource_pool_alias_mapping.py  resource_reservation_manager.py
app/app/core/: config.py  exceptions.py  security.py
app/app/crud/: __init__.py  abstract_base.py  crud_item.py  reservation_crud.py  resource_crud.py  resource_pool_crud.py
app/app/db/: base.py  base_class.py  init_db.py  session.py
app/app/models/: __init__.py  applicable_time_period_model.py  applied_capacity_amount_model.py  channel_ref_model.py  characteristic_model.py  item.py  place_model.py  place_ref_model.py  product_offering_ref_model.py  related_party_ref_model.py  requested_period_model.py  reservation_applicable_time_period_model.py  reservation_applied_capacity_amount_model.py  reservation_characteristic_model.py  reservation_external_party_characteristics_model.py  reservation_item_model.py  reservation_model.py  reservation_place_model.py  reservation_related_party_model.py  reservation_requested_period_model.py  reservation_resource_capacity_model.py  reservation_resource_model.py  reservation_resource_name_model.py  reservation_resource_pool_model.py  reservation_valid_for_model.py  resource_capacity_demand_model.py  resource_collection_ref_model.py  resource_model.py  resource_pool_applicable_time_period_model.py  resource_pool_capacity_model.py  resource_pool_management_model.py  resource_pool_model.py  resource_pool_place_model.py  resource_pool_ref_model.py  resource_pool_related_party_model.py  resource_pool_resource_model.py  resource_pool_resource_specification_model.py  resource_ref_model.py  resource_specification_model.py  valid_for_model.py  (+1 more)
app/app/providers/: __init__.py  auth_provider.py  cls.py  nc_manager_provider.py  nc_provider.py  net_cracker_reservation_provider.py  netcracker_auth_provider.py  netcracker_release_ip_provider.py  netcracker_resource_inventory_provider.py  netcracker_resource_pool_patch_provider.py  resouce_pool_provider.py  resource_catalog_provider.py  resource_inventory_provider.py  resource_pool_provider.py
app/app/schemas/: __init__.py  applicable_time_period_schema.py  applied_capacity_amount_schema.py  capacity_schema.py  channel_ref_schema.py  characteristic_schema.py  place_ref_schema.py  place_schema.py  product_offering_ref_schema.py  related_party_ref_schema.py  requested_period_schema.py  reservation_applicable_time_period_schema.py  reservation_applied_capacity_amount_schema.py  reservation_characteristic_schema.py  reservation_external_party_characteristics_schema.py  reservation_item_schema.py  reservation_place_schema.py  reservation_related_party_schema.py  reservation_requested_period_schema.py  reservation_resource_capacity_schema.py  reservation_resource_name_schema.py  reservation_resource_pool_schema.py  reservation_resource_schema.py  reservation_schemas.py  reservation_valid_for_schema.py  resource_capacity_demand_schema.py  resource_pool_applicable_time_period_schema.py  resource_pool_capacity_schema.py  resource_pool_management_schema.py  resource_pool_place_schema.py  resource_pool_related_party_schema.py  resource_pool_resource_schema.py  resource_pool_resource_specification_schema.py  resource_pool_schema.py  resource_ref_schema.py  resource_reservation_item_schema.py  resource_schemas.py  resource_specification_schema.py  token_schema.py  valid_for_schema.py
app/app/tests/: conftest.py  main_test.py
app/app/tests/api/api_v1/: test_items.py
app/app/tests/api/api_v1/endpoints/: reservation_endpoints_test.py  resource_endpoints_test.py  resource_pool_endpoints_test.py
app/app/tests/core/: config_test.py
app/app/tests/crud/: test_item.py
app/app/tests/mocks/: __init__.py  reservation_crud_mocks.py  resource_pool_crud_mocks.py
app/app/tests/utils/: item.py
backend/: backend.dockerfile
(+7 files in other folders)
