[tool.poetry]
name = "resource_pool"
version = "0.1.0"
description = "Resource Pool API"
authors = [
    "Gopalakrishn  R M <gopalakrishna.rm@prodapt.com>"
]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
# Main application framework
fastapi = "^0.103.1"
# ASGI web server implementation with Cython dependencies and other extras
uvicorn = { extras = ["standard"], version = "^0.23.2" }
# Server and process manager for ASGI applications
gunicorn = "^21.2.0"
# Middleware for request ID propagation
asgi-correlation-id = "^4.2.0"
# Async database driver for MySQL/MariaDB
aiomysql = "^0.2.0"
# Database schema migration tool
alembic = { version = "^1.12.0", extras = ["tz"] }
# Database ORM
sqlalchemy = { version = "^2.0.21", extras = ["asyncio"] }
# Type validation schemas used within FastAPI
pydantic = "^2.4.1"
# Settings management using Pydantic
pydantic-settings = "^2.0.3"
# Generic retry library
tenacity = "^8.2.3"
pyjwt = "^2.8.0"


tinaa-logger = "^0.1.4"

[tool.poetry.dev-dependencies]
mypy = "^0.790"
black = "22.3.0"
isort = "^4.3.21"
autoflake = "^1.3.1"
flake8 = "^3.7.9"
pytest = "^5.4.1"

sqlalchemy-stubs = "^0.3"

pytest-cov = "^2.8.1"
watchdog = "^2.1.3"
argh = "^0.26.2"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"


[[tool.poetry.source]]
# Private TINAA package registry hosted in GitLab
name = 'tinaa'
url = 'https://gitlab.tinaa.teluslabs.net/api/v4/projects/1029/packages/pypi/simple'
priority = "supplemental"


[tool.autoflake]
exclude = "venv,.venv"
ignore-init-module-imports = true
in-place = true
recursive = true
remove-all-unused-imports = true
remove-unused-variables = true


[tool.black]
line-length = 88
target-version = ['py311']


[tool.isort]
profile = "black"
line_length = 88  # Same as Black
include_trailing_comma = true
force_grid_wrap = 0
known_first_party = ["app"]
known_third_party = ["alembic"]


[tool.mypy]
# See https://mypy.readthedocs.io/en/stable/config_file.html for more information
# Disallows defining functions without type annotations or with incomplete type annotations
disallow_untyped_defs = true
# Shows column numbers in error messages
show_column_numbers = true
# Prefixes each error with the relevant context
show_error_context = true
# Warns about casting an expression to its inferred type
warn_redundant_casts = true
# Warns about unneeded # type: ignore comments
warn_unused_ignores = true


[tool.pytest.ini_options]
# The pytest team intends to fully utilize the rich TOML data format for configuration
# in the future, reserving the [tool.pytest] table for that. The ini_options table is
# being used, for now, as a bridge between the existing .ini configuration system and
# the future configuration format.

# Ignore deprecation warnings produced by FastAPI internal calls to Pydantic
filterwarnings = """
ignore:.*use `with_info_plain_validator_function` instead.:DeprecationWarning
"""


[tool.ruff]
# Enable pycodestyle (`E`), Pyflakes (`F`), pep8-naming (`N`) and Pylint (`PL`) codes
# by default
select = ["E", "F", "N", "PL"]
ignore = []
# Same as Black
line-length = 88
# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
# Assume Python 3.11
target-version = "py311"


[tool.ruff.per-file-ignores]
"app/models/__init__.py" = ["F401"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true